# aeson-diff

./: .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  HLint.hs  LICENSE  README.md  Setup.hs  aeson-diff.cabal  patch  stack.yaml
bench/: Benchmarks.hs
lib/Data/: Distance.hs
lib/Data/Aeson/: Diff.hs  Patch.hs  Pointer.hs
lib/Data/Aeson/Diff/: Util.hs
src/: diff.hs  patch.hs
test/: diff-examples.hs  distance.hs  doctests.hs  examples.hs  hlint-check.hs  patch-examples.hs  properties.hs
test/data/: 01-diff-target.json  01-source.json  01-target.json  02-data-source.json  02-target.json  03-source.json  03-target.json  04-source.json  04-target.json  skip-rfc6902_a13-original.json
test/data/A1/: patch.json
test/data/A10/: patch.json  result.json
test/data/A12/: patch.json
test/data/A13/: error  patch.json
test/data/A15/: patch.json
test/data/A16/: result.json
test/data/A2/: patch.json
test/data/A3/: document.json  patch.json
test/data/A4/: patch.json
test/data/A5/: result.json
test/data/A6/: document.json  patch.json
test/data/A7/: document.json  patch.json  result.json
test/data/A8/: document.json  patch.json
test/data/A9/: document.json  patch.json
test/data/cases/: case2-original.json  case3-error.txt  case4-error.txt
test/data/diff-cases/: c1-b.json  c1-patch.json  c2-b.json  c2-patch.json
test/data/patch-cases/: case1-original.json  case1-patch.json  case1-result.json  case2-patch.json  case2-result.json  case3-error.txt  case3-patch.json  case4-patch.json  case5-error.txt  case5-original.json  case5-patch.json
test/data/rfc6902/: a11-patch.json  a12-error.txt  a14-original.json  a14-patch.json  a15-error.txt  a16-original.json  a16-patch.json  a2-result.json  a4-result.json  a5-patch.json  a6-result.json  a9-error.txt
