name:                aeson-diff
version:             0.1.0.0
synopsis:            Extract and apply patches to JSON documents.
description:         Extract and apply patches to JSON documents.
homepage:            https://github.com/thsutton/aeson-diff
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
copyright:           (c) 2015 Thomas Sutton and others.
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository     HEAD
  type: git
  location: https://github.com/thsutton/aeson-diff

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     Data.Aeson.Diff
                     , Data.Distance
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , bytestring
                     , hashable
                     , mtl
                     , scientific
                     , text
                     , unordered-containers
                     , vector

executable             json-diff
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             diff.hs
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , aeson-diff
                     , bytestring
                     , optparse-applicative
                     , text

executable             json-patch
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             patch.hs
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , aeson-diff
                     , optparse-applicative
                     , text

test-suite             properties
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             properties.hs
  build-depends:       base >=4.7 && <4.8
                     , QuickCheck
                     , aeson
                     , aeson-diff
                     , quickcheck-instances
                     , semigroups
                     , text
                     , unordered-containers
                     , vector

benchmark benchmarks
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Benchmarks.hs
  build-depends:       base
                     , criterion
                     , aeson-diff
