name:                aeson-diff
version:             0.1.1.2
synopsis:            Extract and apply patches to JSON documents.
description:
  .
  This is a small library for working with changes to JSON documents. It
  includes a library and two command-line executables in the style of the
  diff(1) and patch(1) commands available on many systems.
  .
homepage:            https://github.com/thsutton/aeson-diff
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
copyright:           (c) 2015 Thomas Sutton and others.
category:            JSON, Web, Algorithms
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md
cabal-version:       >=1.10

source-repository     HEAD
  type: git
  location: https://github.com/thsutton/aeson-diff

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     Data.Aeson.Diff
  build-depends:       base >=4.5 && <4.9
                     , aeson
                     , bytestring >= 0.10
                     , edit-distance-vector
                     , hashable
                     , mtl
                     , scientific
                     , text
                     , unordered-containers
                     , vector

executable             json-diff
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             diff.hs
  build-depends:       base
                     , aeson
                     , aeson-diff
                     , bytestring
                     , optparse-applicative >=0.11 && < 0.12
                     , text

executable             json-patch
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             patch.hs
  build-depends:       base
                     , aeson
                     , aeson-diff
                     , bytestring
                     , optparse-applicative >=0.11 && < 0.12

test-suite             properties
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             properties.hs
  build-depends:       base
                     , QuickCheck
                     , aeson
                     , aeson-diff
                     , quickcheck-instances
                     , text
                     , unordered-containers
                     , vector
